
* Added vector_bufreader and vector_bufwriter to overlapping I/O and
  computation when accessing a stxxl::vector in scanning mode.
  - documented problems of scanning in a vector
  - C++11 range loop access support to stxxl::vector via vector_bufreader.

* Added uint40 and uint48 types for integers with five and six bytes.

* Adding STXXL_CHECK macros to always check outcomes in tests.

* Reworking version.h
  - add integer version like 10400 for 1.4.0
  - add get_version_string() for longer version string with features
  - check_library_version() for mismatch between headers and libraries

* Reworking error_handling.h to throw much more useful exceptions with
  errno information and more.

* Various file renames (which are only possible at major version changes).

* Fixing bug in shrinking vector with vector::resize(n,true).

------------------------------------------
Version 1.3.2 (unreleased)

* New Features
  - Add defines STXXL_VERSION_{MAJOR,MINOR,PATCHLEVEL} and library routines
    stxxl::version_{major,minor,patchlevel}() for getting STXXL version
    information and an inline function check_library_version() to check at
    runtime for mismatching header and library versions.  (Bz:#6)
    Available via <stxxl/version.h>
* Platform Support
  - add GCC 4.6
  - add clang++ 2.9
  - update ICPC 12.0 (Intel C++ Composer XE 2011 Update 4): drop workarounds
    for bugs fixed in Update 4
  - Boost 1.46: Boost Filesystem Version 3

------------------------------------------
Version 1.3.1 (10 March 2011)

* Possibly breaking changes
  - No longer open syscall files with O_SYNC|O_DSYNC|O_RSYNC by default when
    doing direct I/O, to avoid a write performance decrease starting with Linux
    kernel version 2.6.32.
    A stxxl::file::SYNC flag has been added to allow forcing the O_*SYNC flags
    when opening files.
  - Lock files by default (if implemented for this file type), can by disabled
    via stxxl::file::NO_LOCK.