@@ -85,7 +85,7 @@
 
 //#define STXXL_MNG_COUNT_ALLOCATION 0/1
 // default: 1
-// used in: mng/mng.h
+// used in: mng/block_manager.h
 // effect if defined: counts current, total and maximum allocation of bytes in
 // block manager. The numbers are exported via block_manager's get_
 // functions. This can be used to determine the maximum disk space required by
