@@ -16,7 +16,7 @@
 
 #include <vector>
 
-#include <stxxl/bits/mng/mng.h>
+#include <stxxl/bits/mng/block_manager.h>
 #include <stxxl/bits/common/rand.h>
 
 
