@@ -17,7 +17,7 @@
 #include <queue>
 #include <limits>
 
-#include <stxxl/bits/mng/mng.h>
+#include <stxxl/bits/mng/block_manager.h>
 #include <stxxl/bits/mng/typed_block.h>
 #include <stxxl/bits/common/addressable_queues.h>
 
