@@ -42,9 +42,9 @@ set(LIBSTXXL_SOURCES
   io/wfs_file_base.cpp
   io/wincall_file.cpp
 
+  mng/block_manager.cpp
   mng/config.cpp
   mng/disk_allocator.cpp
-  mng/mng.cpp
 
   algo/async_schedule.cpp
 
