@@ -12,13 +12,13 @@
 
 stxxl_build_test(test_aligned)
 stxxl_build_test(test_block_alloc_strategy)
+stxxl_build_test(test_block_manager)
+stxxl_build_test(test_block_manager1)
+stxxl_build_test(test_block_manager2)
 stxxl_build_test(test_block_scheduler)
 stxxl_build_test(test_bmlayer)
 stxxl_build_test(test_buf_streams)
 stxxl_build_test(test_config)
-stxxl_build_test(test_mng)
-stxxl_build_test(test_mng1)
-stxxl_build_test(test_mng_recursive_alloc)
 stxxl_build_test(test_pool_pair)
 stxxl_build_test(test_prefetch_pool)
 stxxl_build_test(test_read_write_pool)
@@ -26,20 +26,20 @@ stxxl_build_test(test_write_pool)
 
 stxxl_test(test_aligned)
 stxxl_test(test_block_alloc_strategy)
+stxxl_test(test_block_manager)
+stxxl_test(test_block_manager1)
+stxxl_test(test_block_manager2)
 stxxl_test(test_block_scheduler)
 stxxl_test(test_bmlayer)
 stxxl_test(test_buf_streams)
 stxxl_test(test_config)
-stxxl_test(test_mng)
-stxxl_test(test_mng1)
-stxxl_test(test_mng_recursive_alloc)
 stxxl_test(test_pool_pair)
 stxxl_test(test_prefetch_pool)
 stxxl_test(test_read_write_pool)
 stxxl_test(test_write_pool)
 
-add_define(test_mng "STXXL_VERBOSE_LEVEL=2")
-add_define(test_mng1 "STXXL_VERBOSE_LEVEL=2")
-add_define(test_write_pool "STXXL_VERBOSE_LEVEL=1")
+add_define(test_block_manager "STXXL_VERBOSE_LEVEL=2")
+add_define(test_block_manager1 "STXXL_VERBOSE_LEVEL=2")
+add_define(test_block_manager2 "STXXL_VERBOSE_LEVEL=3")
 add_define(test_prefetch_pool "STXXL_VERBOSE_LEVEL=2")
-add_define(test_mng_recursive_alloc "STXXL_VERBOSE_LEVEL=3")
+add_define(test_write_pool "STXXL_VERBOSE_LEVEL=1")
