@@ -1,5 +1,5 @@
 /***************************************************************************
- *  tests/mng/test_mng1.cpp
+ *  tests/mng/test_block_manager1.cpp
  *
  *  Part of the STXXL. See http://stxxl.sourceforge.net
  *
