@@ -1,5 +1,5 @@
 /***************************************************************************
- *  tests/mng/test_mng_recursive_alloc.cpp
+ *  tests/mng/test_block_manager2.cpp
  *
  *  Part of the STXXL. See http://stxxl.sourceforge.net
  *
