@@ -89,6 +89,8 @@ Version 1.4.0 (unreleased)
 
 * Adding STXXL_CHECK macros to always check outcomes in tests.
 
+* Renaming mng/mng.{h,cpp} -> mng/block_manager.{h,cpp}.
+
 * Reworking version.h
   - add integer version like 10400 for 1.4.0
   - add get_version_string() for longer version string with features
